# django-tutorial-503

./: Makefile  pyproject.toml  readme.md
mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  result.html
