[tool.poetry]
name = "django-tutorial-503"
version = "0.1.0"
description = ""
authors = ["ricepotato <sukjun40@naver.com>"]
readme = "README.md"
packages = [{include = "django_tutorial_503"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
